<resources>
    <string name="university">Bandırma 17 Eylül Üniversitesi</string>
    <string name="app_name">BANU Kampus</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Anasayfa</string>
    <string name="menu_obs">OBS</string>
    <string name="menu_notices">Duyurular</string>
    <string name="menu_news">Haberler</string>
    <string name="menu_activities">Etkinlikler</string>
    <string name="menu_communities">Topluluklar</string>
    <string name="menu_academicCalendar">Akademik Takvim</string>
    <string name="menu_billOfFare">Yemek Listesi</string>
    <string name="menu_newStudent">Yeni Öğrenci</string>
    <string name="menu_busTimes">Otobüs Saatleri</string>
    <string name="menu_wantOrComplaint">İstek / Şikayet</string>
    <string name="menu_contact">İletişim</string>
</resources>